<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.jhon.appprocessos.MyProcessActivity">

    <item
        android:id="@+id/action_perfil"
        android:title="@string/action_perfil"
        android:orderInCategory="100"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/action_new_solicitacion"
        android:title="@string/action_new_solicitacion"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_atualizar"
        android:title="@string/action_atualizar"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_rank"
        android:title="@string/action_rank"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sair"
        android:title="@string/action_sair"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_fechar"
        android:title="@string/action_fechar"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
